name:                make-package
version:             1.0.0
synopsis:            Make a Cabal package
description:         Make a Cabal package
license:             BSD3
license-file:        LICENSE
author:              Chris Done
maintainer:          chrisdone@gmail.com
category:            Development
build-type:          Simple
cabal-version:       >=1.8
data-files:          files/package.cabal
                     files/licenses/Apache-2.0.license
                     files/licenses/BSD3.license
                     files/licenses/MIT.license
                     files/Setup.hs
                     files/dot-gitignore
                     files/Main.hs
                     files/README.md
                     files/Package.hs

executable make-package
  hs-source-dirs:    src
  main-is:           Main.hs
  other-modules:     Github
                   , IO
  build-depends:     base >= 4 && < 5,
                     bytestring,
                     configurator,
                     directory,
                     filepath,
                     github,
                     haskeline,
                     mtl,
                     process,
                     text,
                     time,
                     time-lens
