name:                make-package
version:             1.0.0
synopsis:            Make a Cabal package
description:         Make a Cabal package
license:             BSD3
license-file:        LICENSE
author:              Chris Done
maintainer:          chrisdone@gmail.com
category:            Development
build-type:          Simple
cabal-version:       >=1.8
data-files:          files/package.cabal
                     files/licenses/*.license
                     files/Setup.hs
                     files/dot-gitignore
                     files/Main.hs
                     files/README.md
                     files/Package.hs
extra-source-files:  make-package.config

executable make-package
  hs-source-dirs:    src
  main-is:           Main.hs
  other-modules:     Github
                   , IO
                   , Options
  build-depends:     base >= 4 && < 5,
                     async,
                     bytestring,
                     configurator,
                     containers,
                     directory,
                     filepath,
                     github,
                     haskeline,
                     mtl,
                     process,
                     text,
                     time,
                     time-lens
  ghc-options: -Wall
