name:                $name
version:             0.0.0
synopsis:            $desc
description:         $desc
license:             BSD3
license-file:        LICENSE
author:              $author
maintainer:          $email
copyright:           $year $author
category:            $category
build-type:          Simple
cabal-version:       >=1.8

library
  hs-source-dirs:    src/
  ghc-options:       -Wall -O2
  exposed-modules:   $exposed
  build-depends:     base >= 4 && <5

executable $name
  hs-source-dirs:    src/
  ghc-options:       -Wall -O2
  main-is:           Main.hs
  build-depends:     base >= 4 && < 5
